# kifu

./: .gitignore  .rules  Cargo.toml  LICENSE-MIT  README.md  bun.lockb  bunfig.toml  package.json
.github/workflows/: ci-cd.yml
apps/api/: .dev.vars.example  Cargo.toml  wrangler.jsonc
apps/api/src/: error.rs  lib.rs  router.rs  state.rs  tenhou_fetch.rs  tenhou_queue_do.rs
apps/api/src/auth/: middleware.rs  password.rs  session.rs
apps/api/src/db/: games.rs  users.rs
apps/api/src/db/migrations/: 0001_init.sql  0002_career_exact_name.sql  0003_ledger_order_indexes.sql  0004_saved_game_visibility.sql  0005_remove_noname_claims.sql
apps/api/src/routes/: auth.rs  game_visibility.rs  games.rs  health.rs  me.rs  mod.rs  oauth.rs  players.rs  public_games.rs
apps/web/: .env.example  package.json  tailwind.config.ts  wrangler.jsonc
apps/web/src/: app.html
apps/web/src/lib/: format.ts  handLedger.test.ts  handLedger.ts  player.test.ts  player.ts  query.test.ts  query.ts  scoreAxis.ts  seo.ts  theme.ts
apps/web/src/lib/api/: client.ts
apps/web/src/lib/components/: CareerView.svelte  ChartCard.svelte  DealInMatrix.svelte  DiscardPile.svelte  DiscardPond.svelte  DoraTray.svelte  GameList.svelte  HandRack.svelte  HandRow.svelte  HandScoreChart.svelte  Header.svelte  HeatmapCell.svelte  MahjongTile.svelte  MeldArea.svelte  Pagination.svelte  PercentBar.svelte  PlaybackScrubber.svelte  PlayerSearch.svelte  ReplayScrubber.svelte  ScorePlaque.svelte  ScoreTrend.svelte  StatCard.svelte  StatTile.svelte  TableBoard.svelte  ThemeToggle.svelte  TileBack.svelte  TileFace.svelte  WallCounter.svelte  WindMarker.svelte
apps/web/src/lib/replay/: buildSnapshots.ts  tiles.ts
apps/web/src/lib/server/: oauth.test.ts  oauth.ts
apps/web/src/lib/styles/: app.css
apps/web/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
apps/web/tests/: buildSnapshots.test.ts
apps/web/tests/fixtures/: 2017010100gm-00a9-0000-003dbd5d.json
crates/codegen/: Cargo.toml
crates/codegen/src/: main.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs  stats.rs  types.rs
crates/domain/src/mjlog/: calls.rs  mod.rs  parser.rs  rules.rs  yaku.rs
crates/domain/tests/: fixture.rs
(+18 files in other folders)
