[package]
name = "kifu-api"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8.9", default-features = false }
domain = { path = "../../crates/domain" }
tower-service = "0.3.3"
worker = { version = "0.8.5", features = ["axum", "http"] }
