[package]
name = "kifu-api"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9", default-features = false, features = ["json"] }
base64 = "0.22.1"
domain = { path = "../../crates/domain" }
getrandom = { version = "0.2.16", features = ["js"] }
hmac = "0.12.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tower-service = "0.3.3"
worker = { version = "0.8.5", features = ["axum", "d1", "http"] }
