[package]
name = "kifu-api"
version = "0.1.0"
edition = "2024"
publish = false
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8.9", default-features = false, features = ["json", "query"] }
base64 = "0.22.1"
domain = { path = "../../crates/domain" }
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
hmac = "0.12.1"
regex = { version = "1.13.0", default-features = false, features = ["perf", "std"] }
reqwest = { version = "0.13.4", default-features = false, features = ["form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
thiserror = "2.0.18"
tower-service = "0.3.3"
wasm-bindgen = "0.2.126"
worker = { version = "0.8.5", features = ["axum", "d1", "http"] }
