[package]
name = "domain"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
bindings = ["dep:ts-rs"]

[dependencies]
percent-encoding = "2.3.2"
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
ts-rs = { version = "12.0.1", optional = true }

[dev-dependencies]
serde_json = "1.0.150"
